<resources>
    <string name="app_name">Buruh ID</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="akun">Account</string>
    <string name="payment">Payment</string>
    <string name="order">Order</string>
    <string name="buruh_id">Buruh id</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">SKIP</string>
    <string name="intro_title_1">Easy to find a Worker</string>
    <string name="intro_title_2">Secured perfectly</string>
    <string name="intro_title_3">Let\'s Get Started</string>
    <string name="desc_intro_1">Make it easier for you to find the best workers for your project</string>
    <string name="desc_intro_2">Perfect security for your comfortable transactions</string>
    <string name="desc_intro_3">An easy and comfortable UI to use for you</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="doesn_t_have_account_yet">Doesn\'t have account yet?</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="agree_with">Agree with</string>
    <string name="term_and_condition">Term and Condition</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="retype">Re-type Password</string>
    <string name="valid_email">Please enter a valid email address</string>
    <string name="cant_empty">Field can\'t be empty!</string>
    <string name="doesnt_match">Must match as password!</string>
    <string name="password_must_contains">Password min 8 character and must contains number, lowercase, uppercase</string>
    <string name="valid_number">Please enter a valid number</string>
    <string name="not_checked">Must be checked to continue</string>
    <string name="select_worker">Select Worker</string>
    <string name="individu_worker">Individu Worker</string>
    <string name="team_worker">Team Worker</string>
    <string name="whats_new">Whats New?</string>
    <string name="pendapat">What do you think about Buruh ID?</string>
    <string name="isi_pendapat">We always try to give the best to our customers, your criticism and suggestions mean a lot to us</string>
    <string name="your_order">Your Order</string>
    <string name="history">History</string>
    <string name="bill">Bill</string>
    <string name="welcome_back">Welcome back</string>
    <string name="profiles">Profile</string>
    <string name="logout">Logout</string>
    <string name="edit_name">Change name</string>
    <string name="edit_email">Change email</string>
    <string name="change">Change</string>
    <string name="change_photo">Change photo</string>
    <string name="change_phone_number">Change phone number</string>
    <string name="change_password">Change password</string>
    <string name="img">img_select</string>
    <string name="your_plan">Your Plan</string>
    <string name="wrong_time">Work can only start from 08:00 to 15.00!</string>
    <string name="worng_end_date">Can\'t end work at this time!</string>
    <string name="type_of_worker">Type of worker</string>
    <string name="amount_of_worker">Amount of worker</string>
    <string name="start_dateawto">Start date(Auto)</string>
    <string name="start_date">Start date</string>
    <string name="start_hour">Start hour</string>
    <string name="city">District/City</string>
    <string name="address">Address</string>
    <string name="name_of_worker">Name of worker</string>
    <string name="job_description">Job description</string>
    <string name="select_frequency">Select Frequency</string>
    <string name="end_date">End date</string>
    <string name="total_days">Total days</string>
    <string name="location">Location</string>
    <string name="worker">Worker</string>
    <string name="make_order">Make Order</string>
    <string name="msg_order_success_title">Your Order has been successfull, Wait confirmation from our Worker</string>
    <string name="msg_order_success_desc">Your order has been proccessed, please stay and wait confirmation from our worker, we will give you notification about it, Cheers !</string>
    <string name="done">Done</string>
    <string name="cek_internet">Check your network!</string>
    <string name="suc_logout">Logout success!</string>
    <string name="something_wrong">Something wrong!</string>
    <string name="total_payment">Total Payment</string>
    <string name="sub_districts">Sub-districts</string>
    <string name="lengkapi">Complete your data!</string>
    <string name="pleasecekorder">Please check your order again!</string>
    <string name="village">Village</string>
    <string name="server_error">Server error!</string>
    <string name="re_type_new_password">Re-type New Password</string>
    <string name="new_password">New Password</string>
    <string name="code_payment">Code payment</string>
    <string name="status_payment">Status payment</string>
    <string name="no_worker_selected">No worker selected</string>
    <string name="fill_all">Please fill all of the form!</string>
    <string name="change_name">Change name</string>
    <string name="change_email">Change email</string>
    <string name="ordercancel">Order canceled!</string>
    <string name="sure_cancel">Are you sure want to cancel?</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="order_details">Order Details</string>
    <string name="payment_details">Payment Details</string>
    <string name="payment_code">Payment code</string>
    <string name="help">Help</string>
    <string name="pay">Pay</string>
    <string name="proofofpayment">Proof of payment</string>
    <string name="min_trans">Minimum transaction</string>
    <string name="disc">Discount</string>
    <string name="proses">On process...</string>
    <string name="order_code">Order code</string>
    <string name="history_order_details">History Order Details</string>
    <string name="promotion">Promotion</string>
    <string name="finish_order">Finish order</string>
    <string name="sure_finish">Are you sure want to finish?</string>
    <string name="people">People</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="are_logout">Are you sure want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pp">Photo profile</string>
    <string name="del_pho">Delete photo</string>
    <string name="want_del">Are you sure want delete?</string>
    <string name="bugfix">Bug Fixed</string>
    <string name="up_virus">Update Covid-19</string>
    <string name="fix_bug">Fix a bug</string>
    <string name="info_virus">Indonesia virus info</string>
    <string name="secure_transc">Secured Transaction</string>
    <string name="howTouse">How to use</string>
    <string name="aboud_us">About us</string>
    <string name="plz_gv_rat">Please give a rating!</string>
    <string name="tim_work">Team worker :</string>
    <string name="wait_confirm">Waiting confirmation from worker...</string>
    <string name="order_acc">Order accepted!, waiting to start job...</string>
    <string name="workinggg">Working...</string>
    <string name="canceled">Canceled!</string>
    <string name="fin">Finish!</string>
    <string name="wait_pay">Waiting for payment..</string>
    <string name="acc_t_work">Accepted to workers</string>
    <string name="rejectedd">Rejected! Please send clear proof of payment!</string>
    <string name="work_until">Work until</string>
    <string name="acc_t_bID">Accepted to Buruh ID</string>
    <string name="created">Created</string>
    <string name="change_language">Change language</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="orderr_codee">Order code:</string>
    <string name="workuntil">Work until</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="msg_n">The content you are looking for is not available or your connection is not stable, please refresh the page</string>
    <string name="terkonfirmasi">Confirmed</string>
    <string name="sembuh">Recover</string>
    <string name="dalam_perawatan">In care</string>
    <string name="meninggal">Died</string>
    <string name="cucitangan">Hand Wash</string>
    <string name="tetapdirumah">Stay at Home</string>
    <string name="pakaimasker">Wear the Mask</string>
    <string name="socialdistancing">Keep Distance</string>
    <string name="jagakebersihan">Keep Clean</string>
    <string name="hindariberkumpul">Avoid Gathering</string>
    <string name="covidd">Covid-19</string>
    <string name="servererrorr">Server error, please refresh page!</string>
    <string name="nointernett">Connection lost, please refresh page!</string>
    <string name="blm_order">You have not placed an order at all, let\'s start your project!</string>
    <string name="blmnotif">No notifications yet, let\'s start your project!</string>
    <string name="blmpromo">No promos yet, wait for the prom!</string>
    <string name="blmadamitra">Well, I\'m sorry your area doesn\'t have any of our partners</string>
    <string name="desc_about">is a platform made by the children of the nation that is devoted to making it easier for construction workers to find work and to make it easier for people to find the best workers for their projects </string>
    <string name="call_us">Call us</string>
    <string name="desc_wnew"> 1. Update notification feature \n2. Add 2 languages \n3. Bug fix </string>
    <string name="desc_secure"> The security of your data against us is guaranteed, your personal data will be kept confidential whether it is personal data or transaction data, but we can continue to provide and store that data both for evidence for future related cases </string>
    <string name="v1">version 1.0.3</string>
    <string name="ht1_desc">Enter the Buruh Id application and select the workers you need, individuals for individuals and teams for more than 1 person </string>
    <string name="ht2_desc">Fill in the data, the number of workers you need and select the workers you want, also fill in the job description. </string>
    <string name="ht3_desc">Select the worker you want </string>
    <string name="ht4_desc">When finished, press the make order button </string>
    <string name="ht5_desc">Check your order again, if everything is correct, press the complete button </string>
    <string name="ht6_desc">After the order has been made, wait for confirmation from our workers. </string>
    <string name="ht7_desc">When your order has reached our workers, you will receive a notification from us, if the order is received, check into the payment menu and immediately make a payment </string>
    <string name="ht8_desc">After making a payment, upload your proof of payment immediately and press the payment button, DONE !!! congratulations you have successfully placed an order. </string>
    <string name="ht9_desc">You can continue to check the status of your order on the order page </string>
    <string name="any_question">Any question?</string>
    <string name="transfer_to_bank_account">Transfer to Bank Account:</string>
    <string name="how_to_transfer">How to transfer</string>
    <string name="tutor_transs"> 1. Insert your ATM card and PIN \n2. Select the transfer menu to another bank \n3. Choose transfer to Bank BRI \n4. Enter No. account \n5. Enter the transfer amount \n6. Verify the transfer amount and No. account as per \n7. Transfer money, and upload proof of transfer to the application </string>
    <string name="comment">Comment</string>
    <string name="thanks">Thank you for giving us advice</string>
    <string name="your_message">Your message...</string>
</resources>