<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.wnew.WNewActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_alignParentTop="true"
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:elevation="0dp">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/whats_new"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />
            <TextView
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/v1"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />
            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/desc_wnew"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="normal" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>