<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
    android:layout_alignParentTop="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">
        <com.xw.repo.widget.BounceScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_home"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/open_sans"
                    android:layout_margin="@dimen/_10sdp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"
                    app:cardCornerRadius="@dimen/_20sdp"
                    android:elevation="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:foregroundTint="@android:color/white">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/select_worker"
                            android:textSize="@dimen/_10ssp"
                            android:textStyle="bold"
                            android:textColor="@color/colorPrimaryDark"
                            android:fontFamily="@font/open_sans"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginStart="@dimen/_20sdp"/>
                        <LinearLayout
                            android:gravity="center"
                            android:layout_margin="@dimen/_10sdp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:gravity="center"
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="@dimen/_10sdp"
                                android:layout_marginStart="@dimen/_15sdp"
                                android:orientation="vertical">
                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:id="@+id/img_solo"
                                    android:transitionName="@string/img"
                                    android:layout_width="@dimen/_80sdp"
                                    android:src="@drawable/solo_worker"
                                    android:layout_height="@dimen/_80sdp"/>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="@dimen/_9ssp"
                                    android:textColor="@color/colorPrimaryDark"
                                    android:fontFamily="@font/open_sans"
                                    android:text="@string/individu_worker"
                                    android:textAlignment="center"
                                    android:layout_margin="@dimen/_5sdp"/>
                            </LinearLayout>


                            <LinearLayout
                                android:layout_marginEnd="@dimen/_15sdp"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:layout_width="@dimen/_100sdp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="vertical">
                                <de.hdodenhof.circleimageview.CircleImageView
                                    android:id="@+id/img_team"
                                    android:transitionName="@string/img"
                                    android:layout_width="@dimen/_80sdp"
                                    android:src="@drawable/team_worker"
                                    android:layout_height="@dimen/_80sdp"/>
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="@dimen/_9ssp"
                                    android:textColor="@color/colorPrimaryDark"
                                    android:fontFamily="@font/open_sans"
                                    android:text="@string/team_worker"
                                    android:textAlignment="center"
                                    android:layout_margin="@dimen/_5sdp"/>
                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/whats_new"
                    android:textStyle="bold"
                    android:textAlignment="viewStart"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_5sdp"/>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rc_whats_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rc_other_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10sdp"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_survey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_70sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    app:cardCornerRadius="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:elevation="@dimen/_5sdp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:foregroundTint="@android:color/white">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="@dimen/_60sdp"
                            android:layout_height="match_parent"
                            android:src="@drawable/paperlogo"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_5sdp"/>
                        <LinearLayout
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/pendapat"
                                android:textSize="@dimen/_10ssp"
                                android:textStyle="bold"
                                android:textColor="@color/colorPrimaryDark"
                                android:fontFamily="@font/open_sans"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/_9ssp"
                                android:layout_marginEnd="@dimen/_30sdp"
                                android:textColor="@color/colorPrimaryDark"
                                android:fontFamily="@font/open_sans"
                                android:text="@string/isi_pendapat"/>

                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </com.xw.repo.widget.BounceScrollView>
    </LinearLayout>

</RelativeLayout>